<resources>
    <string name="parse_app_id">KorsaApp</string>
    <string name="parse_client_key">KSJFKKJ3K4JK3J4K3JUWE89ISDJHFSJDFS</string>
    <string name="app_name">Korsa</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_your_location">Map</string>
    <string name="title_activity_view_rider_location">View Rider Location</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="print_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="msg_sign_up">Do not have an account?</string>
    <string name="sign_up"> Sign Up</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_car">Car</string>
</resources>
