<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.korsa.korsa.MainActivity"
    android:background="@drawable/background">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:id="@+id/riderOrDriverSwitch"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="@string/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/riderOrDriverSwitch"
        android:layout_toEndOf="@+id/riderOrDriverSwitch"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:id="@+id/textView2"
        tools:textSize="18sp" />

    <TextView
        android:text="@string/rider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginTop="40dp"
        android:id="@+id/textView"
        android:layout_alignBaseline="@+id/riderOrDriverSwitch"
        android:layout_alignBottom="@+id/riderOrDriverSwitch"
        android:layout_toLeftOf="@+id/riderOrDriverSwitch"
        android:layout_toStartOf="@+id/riderOrDriverSwitch"
        tools:textSize="18sp" />

    <Button
        android:text="@string/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/getStartedButton"
        android:layout_below="@+id/riderOrDriverSwitch"
        android:layout_centerHorizontal="true"
        android:onClick="getStarted" />

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ubericon"
        android:id="@+id/imageView"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-25dp"/>-->


</RelativeLayout>
