<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.korsa.korsa.SignIn"
    android:background="@drawable/backgroundapp"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@mipmap/unnamed"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:text="@string/rider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    tools:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="@color/cast_expanded_controller_background_color" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/riderOrDriverSwitch"
                    tools:ignore="HardcodedText"
                    android:layout_margin="10dp"
                    android:switchMinWidth="50dp"
                    />

                <TextView
                    android:text="@string/driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    tools:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="@color/cast_expanded_controller_background_color" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/print_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/signin"
                android:layout_marginTop="16dp"
                android:text="  Get Started"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sign_up_desc"
                    android:text="Do not have an account?  "
                    android:textColor="@android:color/background_light"
                    android:gravity="center_horizontal|center" />
                <TextView
                    android:clickable="true"
                    android:textColor="@android:color/holo_red_light"
                    android:selectAllOnFocus="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/register"
                    android:drawableLeft="@drawable/register"
                    android:text=" Sign Up" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back"
        android:layout_marginTop="50dp"
        />-->

</LinearLayout>
